[package]
name = "Boot-Banner"
version = "0.1.0"
authors = ["m1n67un <rkdalsrbs0@naver.com>"]
description = "An elegant banner library that enhances project launches with eye-catching terminal displays and helpful assistance."
license = "MIT OR Apache-2.0"
repository = "https://github.com/m1n67un/Boot-Banner"

[lib]
proc-macro = true

[dependencies]
# 매크로
quote = "1.0"
syn = { version = "2.0", features = ["full"] }